Feat: add new `boterview` color to `Tailwind` theme

--- a/docs/.vitepress/assets/css/styles.css
+++ b/docs/.vitepress/assets/css/styles.css
@@ -24,6 +24,7 @@
     --color-boterview-300: #e8b19b;
     --color-boterview-400: #e0977a;
     --color-boterview-500: #d97d5a;
+    --color-boterview-550: #d06b44;
     --color-boterview-600: #c7592e;
     --color-boterview-700: #954322;
     --color-boterview-800: #642d17;
