Feat: add Tailwind typography plugin to frontend styles

--- a/frontend/app/src/assets/css/styles.css
+++ b/frontend/app/src/assets/css/styles.css
@@ -1,5 +1,8 @@
-/* Import Tailwind. */
+/* Imports. */
 @import "tailwindcss";
+
+/* `Tailwind` plugins. */
+@plugin "@tailwindcss/typography";
 
 
 /* Custom colors. */
